--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description"
+        content="Having trouble finding the best time to hold a meetup? Look4Times is designed to effortlessly help you find the best timing, for any meetup you want to have. " />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,8 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://telegram.org/js/telegram-web-app.js" ></script>
-    <title>React App</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <title>Look4Times</title>
 
 </head>
 
